pytigergraph/1.8/core-functions.md
![TigerGraph Logo](https://www.tigergraph.com/wp-content/uploads/2020/05/TG_LOGO.svg) [Docs](https://docs.tigergraph.com/home)
Page 1[Prev](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/)[Next](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/)
Search by [Algolia](https://www.algolia.com/docsearch)
[Products](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/)
TigerGraph Savanna
[TigerGraph Savanna](https://docs.tigergraph.com/savanna/main/overview/) [(_TigerGraph Cloud Classic_)](https://docs.tigergraph.com/cloud/main/start/overview)
TigerGraph Server
[TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
TigerGraph Suite
[GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/) [Insights](https://docs.tigergraph.com/insights/4.2/intro/) [GSQL Web Shell](https://docs.tigergraph.com/tigergraph-server/current/gsql-shell/web)
Query Languages
[GSQL Language Reference](https://docs.tigergraph.com/gsql-ref/4.2/intro/) [GSQL Web Shell](https://docs.tigergraph.com/tigergraph-server/current/gsql-shell/web) [OpenCypher](https://docs.tigergraph.com/gsql-ref/current/opencypher-in-gsql)
AI & Graph Intelligence
[Graph Data Science Library](https://docs.tigergraph.com/graph-ml/3.10/intro/) [Hybrid Graph+Vector Search](https://docs.tigergraph.com/gsql-ref/current/vector/)
Connectors and APIs
[Data Connectors](https://docs.tigergraph.com/tigergraph-server/current/data-loading) [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/) [TigerGraph GraphQL Service](https://docs.tigergraph.com/graphql/3.9/) [JDBC Driver](https://github.com/tigergraph/ecosys/tree/master/tools/etl/tg-jdbc-driver)
Legacy Documentation
[ Legacy Documentation ](https://docs-legacy.tigergraph.com)
[Resources](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/)
[Developer Site](https://dev.tigergraph.com/) [Community Forum](https://community.tigergraph.com/) [Knowledge Base](https://tigergraph.freshdesk.com/support/solutions)
[Download](https://dl.tigergraph.com)
[ TG Savanna](https://savanna.tgcloud.io)
### [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
  *     * [Overview](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
  *     * [Getting Started](https://docs.tigergraph.com/pytigergraph/1.8/getting-started/)
      * [Installing pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/getting-started/install)
      * [Connecting to TigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/getting-started/connection)
      * [pyTigerGraph 101](https://docs.tigergraph.com/pytigergraph/1.8/getting-started/101)
  *     * [Core Functions](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/)
      * [TigerGraphConnection](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/base)
      * [AsyncTigerGraphConnection](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/async_base)
      * [Authentication Functions](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/auth)
      * [Vertex Functions](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/vertex)
      * [Edge Functions](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge)
      * [Query Functions](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/query)
      * [UDT Functions](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/udt)
      * [GSQL Interface](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/gsql)
      * [Loading Functions](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/loading)
      * [Path Finding Functions](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/path)
      * [Schema Functions](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/schema)
      * [Utility Functions](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/utils)
  *     * [GDS Functions](https://docs.tigergraph.com/pytigergraph/1.8/gds/)
      * [Factory Functions](https://docs.tigergraph.com/pytigergraph/1.8/gds/gds)
      * [Data Loaders](https://docs.tigergraph.com/pytigergraph/1.8/gds/dataloaders)
      * [Featurizer](https://docs.tigergraph.com/pytigergraph/1.8/gds/featurizer)
      * [Metrics](https://docs.tigergraph.com/pytigergraph/1.8/gds/metrics)
      * [Splitters](https://docs.tigergraph.com/pytigergraph/1.8/gds/splitters)
      * [Transforms](https://docs.tigergraph.com/pytigergraph/1.8/gds/transforms)
        * [PyTorch Geometric Transforms](https://docs.tigergraph.com/pytigergraph/1.8/gds/pyg_transforms)
        * [NodePiece Transforms](https://docs.tigergraph.com/pytigergraph/1.8/gds/nodepiece_transforms)
      * [Trainer](https://docs.tigergraph.com/pytigergraph/1.8/gds/trainer)
      * [Models](https://docs.tigergraph.com/pytigergraph/1.8/gds/models)
        * [GraphSAGE](https://docs.tigergraph.com/pytigergraph/1.8/gds/graphsage)
        * [NodePiece](https://docs.tigergraph.com/pytigergraph/1.8/gds/nodepiece)
  *     * [TigerGraph CoPilot](https://docs.tigergraph.com/pytigergraph/1.8/ai/copilot)
  *     * [Datasets](https://docs.tigergraph.com/pytigergraph/1.8/datasets/datasets)
      * [Dataset Object](https://docs.tigergraph.com/pytigergraph/1.8/datasets/datasets_object)
  *     * [Visualization](https://docs.tigergraph.com/pytigergraph/1.8/visualization/visualization)
  *     * [Object Oriented Schema](https://docs.tigergraph.com/pytigergraph/1.8/object_oriented_schema/schema-def)
  *     * [Contributing](https://docs.tigergraph.com/pytigergraph/1.8/contributing/)
  *     * [Release Notes](https://docs.tigergraph.com/pytigergraph/1.8/release-notes/)
      * [Legacy Version Documentation](https://docs.tigergraph.com/pytigergraph/1.8/release-notes/legacy-tg-versions)


pyTigerGraph 1.8
[Fully-Managed: Savanna](https://docs.tigergraph.com/savanna/main/overview/)
[Self-Managed: TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
[Install](https://docs.tigergraph.com/tigergraph-server/current/getting-started/) [Manage](https://docs.tigergraph.com/tigergraph-server/current/system-management/)
Tutorials & Guides
[GSQL](https://github.com/tigergraph/ecosys/blob/master/tutorials/GSQL.md) [OpenCypher in GSQL](https://github.com/tigergraph/ecosys/blob/master/tutorials/Cypher.md) [Hybrid Vector Search](https://github.com/tigergraph/ecosys/blob/master/tutorials/VectorSearch.md)
Reference Manuals
[GSQL](https://docs.tigergraph.com/gsql-ref/4.2/intro/) [OpenCypher](https://docs.tigergraph.com/gsql-ref/current/opencypher-in-gsql/) [Vector](https://docs.tigergraph.com/gsql-ref/current/vector/) [REST APIs](https://docs.tigergraph.com/tigergraph-server/current/api/) [Configuration Parameters](https://docs.tigergraph.com/tigergraph-server/current/reference/configuration-parameters)
Visual Tools
[Develop: GraphStudio](https://docs.tigergraph.com/gui/4.2/intro/) [Administer: Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/) [Visualize: Insights](https://docs.tigergraph.com/insights/4.2/intro/)
AI & Data Science
[Graph Algorithms](https://docs.tigergraph.com/graph-ml/3.10/intro/) [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/) [TigerGraphX](https://github.com/tigergraph/ecosys/blob/master/tutorials/TigerGraphX.md) [ML Workbench](https://docs.tigergraph.com/ml-workbench/1.4/intro/) [CoPilot](https://docs.tigergraph.com/tg-copilot/intro/)
  * [TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/tigergraph-server/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/tigergraph-server/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/tigergraph-server/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/tigergraph-server/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/tigergraph-server/3.6/intro/)
  * [GSQL Language Reference](https://docs.tigergraph.com/gsql-ref/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/gsql-ref/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/gsql-ref/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/gsql-ref/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/gsql-ref/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/gsql-ref/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/gsql-ref/3.6/intro/intro)
  * [TigerGraph Savanna](https://docs.tigergraph.com/savanna/main/overview/)
  * [GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/gui/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/gui/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/gui/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/gui/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/gui/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/gui/3.6/graphstudio/overview)
  * [Insights](https://docs.tigergraph.com/insights/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/insights/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/insights/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/insights/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/insights/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/insights/3.9/intro/)
  * [Graph Data Science Library](https://docs.tigergraph.com/graph-ml/3.10/intro/)
    * [3.10](https://docs.tigergraph.com/graph-ml/3.10/intro/)
  * [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
    * [1.8](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
    * [1.7](https://docs.tigergraph.com/pytigergraph/1.7/intro/)
    * [1.6](https://docs.tigergraph.com/pytigergraph/1.6/intro/)
  * [TigerGraph ML Workbench](https://docs.tigergraph.com/ml-workbench/1.4/intro/)
    * [1.4](https://docs.tigergraph.com/ml-workbench/1.4/intro/)
  * [TigerGraph GraphQL Service](https://docs.tigergraph.com/graphql/3.9/)
    * [3.9](https://docs.tigergraph.com/graphql/3.9/)
  * [TigerGraph CoPilot](https://docs.tigergraph.com/tg-copilot/intro/)
    * [main](https://docs.tigergraph.com/tg-copilot/intro/)
  * [TigerGraph Cloud Classic](https://docs.tigergraph.com/cloud/main/start/overview)


[](https://docs.tigergraph.com/home/)
  * [pyTigerGraph 1.8](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
  * [Core Functions](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/)


[Edit this Page](https://github.com/tigergraph/pytigergraph-docs/edit/v1.8/modules/core-functions/pages/index.adoc)
# Core Functions
Core functions allow you to use the following core features of the TigerGraph database through pyTigerGraph:
  * Managing secrets and securing your connection to TigerGraph instances
  * Retrieving graph schema
  * Run loading jobs
  * Upserting vertices and edges
  * Installing and running queries
  * Executing GSQL code
  * Retrieve version and license information


You can use both the synchronous `TigerGraphConnection` and the asynchronous `AsyncTigerGraphConnection` classes to interact with the core functions.
Core functions are divided into the following categories:
  * [Authentication Functions](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/auth)
  * [Schema Functions](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/schema)
  * [Loading Job Functions](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/loading)
  * [Vertex Functions](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/vertex)
  * [Edge Functions](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/edge)
  * [Query Functions](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/query)
  * [User Defined Tuple (UDT) Functions](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/udt)
  * [GSQL Interface](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/gsql)
  * [Utility Functions](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/utils)
  * [Path Finding Functions](https://docs.tigergraph.com/pytigergraph/1.8/core-functions/path)


3 Twin Dolphin Drive, Ste 225 Redwood City, CA 94065 
Copyright © 2025 TigerGraph
  * ## Resources
    * [Support](https://www.tigergraph.com/support/)
    * [Community](https://community.tigergraph.com/)
    * [Developer Site](https://dev.tigergraph.com/)
    * [Test Drive](https://testdrive.tigergraph.com/)
  * ## Social
    * [Linkedin](https://www.linkedin.com/company/tigergraph/)
    * [Facebook](https://www.facebook.com/TigerGraphDB/)
    * [Twitter](https://twitter.com/tigergraphdb)
  * ## Legal
    * [Privacy Policy](https://www.tigergraph.com/privacy-policy/)
    * [Terms of Use](https://www.tigergraph.com/terms/)
    * [Sitemap](https://docs.tigergraph.com/sitemap.xml)


